# Code-Quality-Security-Audit-System-AI-Agent

./: .gitignore  CITATION.cff  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DOCS.md  Dockerfile  Dockerfile.prod  LIVE_DEPLOYMENT.md  MANIFEST.in  Makefile  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  app.py  cli.py  code_auditor.py  dashboard.py  deploy_all.ps1  deploy_all.sh  deploy_docker.sh  deploy_docker_auto.ps1  deploy_docker_auto.sh  deploy_live.sh  deploy_vercel.sh  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  railway.toml  render.yaml  requirements-vercel.txt  requirements.txt  run_app.py  setup.py  start_app.sh  streamlit_config.toml  vercel.json
.github/workflows/: ci.yml  deploy.yml
assets/examples/: sample_vulnerable_code.py
backend/: Dockerfile  audit_system.db  main.py  requirements.txt
backend/app/api/: endpoints.py
backend/app/core/: auditor.py  patterns.py
backend/app/db/: models.py  session.py
backend/app/services/: ollama_service.py
backend/tests/: test_main.py
config/: config.yaml
demo_project/: vulnerable_app.py
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md
frontend/: index.html
frontend/src/styles/: globals.css
scripts/: deploy.sh  install.bat  install.sh
src/code_audit_system/: __init__.py
src/code_audit_system/ai/: __init__.py  ollama_client.py
src/code_audit_system/cli/: __init__.py  main.py
src/code_audit_system/core/: __init__.py  auditor.py  github_analyzer.py  models.py  patterns.py
src/code_audit_system/dashboard/: __init__.py  streamlit_app.py
tests/: __init__.py  test_quality_patterns.py  test_security_patterns.py
